--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ru.r2cloud</groupId>
-	<artifactId>r2cloud-meteor_demod</artifactId>
-	<version>0.3-beta1-6</version>
+	<artifactId>meteor-demod</artifactId>
+	<version>0.3-beta1-1</version>
 	<name>Meteor demodulator</name>
 	<description>Custom built meteor_demod</description>
 	<inceptionYear>2019</inceptionYear>
@@ -109,7 +109,7 @@
 			<plugin>
 				<groupId>com.aerse.maven</groupId>
 				<artifactId>deb-maven-plugin</artifactId>
-				<version>1.10</version>
+				<version>1.11</version>
 				<executions>
 					<execution>
 						<id>package</id>
